<?xml version="1.0"?>
<package>
  <name>swarm_interaction</name>
  <version>0.1.0</version>
  <description>Swarm interaction system of behaviors</description>

  <maintainer email="cabrera.javier23@gmail.com">Javier Cabrera Marugan</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>behavior_execution_controller</build_depend>
  <build_depend>behavior_execution_manager_msgs</build_depend>
  <build_depend>droneMsgsROS</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>aerostack_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>behavior_execution_controller</run_depend>
  <run_depend>behavior_execution_manager_msgs</run_depend>
  <run_depend>droneMsgsROS</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>aerostack_msgs</run_depend>


  <export>
    <nodelet plugin="${prefix}/swarm_interaction.xml" />
  </export>
</package>
